Favorit part done

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <form action="">
                        <div class="input-field">
                         <input type="text" required>
-                       <label for=""><i class="fa-solid fa-location-dot"></i>   Search location, properties, residental group</label>
+                       <label for="" id="label"><i class="fa-solid fa-location-dot"></i>   Search location, properties, residental group</label>
                        </div>
                         
                        <div class="button"><a href="">Search</a></div>
@@ -126,6 +126,35 @@
         </div>
       </section>
  <!-- Cart Part end -->
+ <!-- Favorit Part start -->
+      <section class="favorit">
+        <div class="container">
+          <div class="common-heading">
+            <p>Pilihan konsumen</p>
+            <h3>Residen Favorit</h3>
+          </div>
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="image-part">
+                <div class="image1"><img src="image/favorit1.png" alt="">
+                  <div class="image2"><img src="image/favorit2.png" alt=""></div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="info-part">
+                <h4>Bangunan yang dirancang oleh Aristektur Handal</h4>
+                <p>Tanpa diragukan, properti yang disediakan dalam webiste kami merupakan hasil kerjasama secara profesional dengan para Arsitektur ternama dan Developer yang terpercaya.</p>
+                <div class="button">
+                  <div class="button1"><a href=""><i class="fa-solid fa-phone"></i> Hubungi Kami</a></div>
+                <div class="button2"><a href="">Explore lebih banyak</a></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+ <!-- Favorit Part end -->
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
