--- a/index.html
+++ b/index.html
@@ -137,21 +137,21 @@
       <section class="favorit">
         <div class="container">
           <div class="common-heading">
-            <p>Pilihan konsumen</p>
-            <h3>Residen Favorit</h3>
+            <p class="fa-para">Pilihan konsumen</p>
+            <h3 class="fa-heading">Residen Favorit</h3>
           </div>
           <div class="row">
             <div class="col-lg-6">
               <div class="image-part">
-                <div class="image1"><img src="image/favorit1.png" alt="">
-                  <div class="image2"><img src="image/favorit2.png" alt=""></div>
+                <div class="image1"><img class="img1" src="image/favorit1.png" alt="">
+                  <div class="image2"><img class="img2" src="image/favorit2.png" alt=""></div>
                 </div>
               </div>
             </div>
             <div class="col-lg-6">
               <div class="info-part">
-                <h4>Bangunan yang dirancang oleh Aristektur Handal</h4>
-                <p>Tanpa diragukan, properti yang disediakan dalam webiste kami merupakan hasil kerjasama secara profesional dengan para Arsitektur ternama dan Developer yang terpercaya.</p>
+                <h4 class="fa2-heading">Bangunan yang dirancang oleh Aristektur Handal</h4>
+                <p class="fa2-para">Tanpa diragukan, properti yang disediakan dalam webiste kami merupakan hasil kerjasama secara profesional dengan para Arsitektur ternama dan Developer yang terpercaya.</p>
                 <div class="button">
                   <div class="button1"><a href=""><i class="fa-solid fa-phone"></i> Hubungi Kami</a></div>
                 <div class="button2"><a href="">Explore lebih banyak</a></div>
@@ -167,8 +167,8 @@
         <div class="container">
          <div class="box">
           <div class="common-heading">
-            <p>Pilihan Auditor</p>
-            <h3>Residen Berbagai Kota</h3>
+            <p class="fa-para">Pilihan Auditor</p>
+            <h3 class="fa-heading">Residen Berbagai Kota</h3>
           </div>
           <div class="slide-ber">
             <div class="slide-icon">
@@ -181,22 +181,22 @@
             <div class="col-lg-4">
               <div class="info">
               <div class="image"><img src="image/berbagai1.png" alt=""></div>
-              <h5>Magnolia Surabaya</h5>
-              <p>Jl. Gatot Subroto No.KM.6,8, RT.001/RW.008, Jatake, Kec. Jatiuwung, Kota Tangerang, Banten 15136</p>
+              <h5 class="ber-heading">Magnolia Surabaya</h5>
+              <p class="ber-para">Jl. Gatot Subroto No.KM.6,8, RT.001/RW.008, Jatake, Kec. Jatiuwung, Kota Tangerang, Banten 15136</p>
             </div></div>
            <div class="col-lg-4">
             <div class="info">
               <div class="image"><img src="image/berbagai2.png" alt=""></div>
-              <h5>Pinang Residences</h5>
-              <p>Jl. Deplu Raya No.16 RT.5, RW.003
+              <h5 class="ber-heading">Pinang Residences</h5>
+              <p class="ber-para">Jl. Deplu Raya No.16 RT.5, RW.003
                 Bintaro, Pesanggrahan, Jakarta Selatan 12330</p>
             </div>
            </div>
           <div class="col-lg-4">
             <div class="info">
               <div class="image"><img src="image/berbagai3.png" alt=""></div>
-              <h5>South Grove</h5>
-              <p>1 No.1, RT.1/RW.1, Lb. Bulus, Kec. Cilandak, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta 12440</p>
+              <h5 class="ber-heading">South Grove</h5>
+              <p class="ber-para">1 No.1, RT.1/RW.1, Lb. Bulus, Kec. Cilandak, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta 12440</p>
             </div>
           </div>
           </div>
@@ -209,33 +209,33 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8">
-              <h4>Hubungi Kami</h4>
+              <h4 class="hub-heading">Hubungi Kami</h4>
               <div class="box">
                 <div class="call">
                   <div class="info">
                     <div><i class="fa-solid fa-phone"></i></div>
                     <div>
-                      <p>Call</p>
-                      <p>+6281232936733</p>
+                      <p class="common-para">Call</p>
+                      <p class="common-para">+6281232936733</p>
                     </div>
                   </div>
-                  <div class="button"><a href="">Call Now</a></div>
+                  <div class="button"><a class="a" href="">Call Now</a></div>
                 </div>
                 <div class="call">
                   <div class="info">
                     <div><i class="fa-solid fa-envelope"></i></div>
                     <div>
-                      <p>email</p>
-                      <p>omahindev@gmail.com</p>
+                      <p class="common-para">email</p>
+                      <p class="common-para">omahindev@gmail.com</p>
                     </div>
                   </div>
-                  <div class="button"><a href="">Email Now</a></div>
+                  <div class="button"><a class="a" href="">Email Now</a></div>
                 </div>
                 
               </div>
             </div>
             <div class="col-lg-4">
-              <h4>Penghargaan</h4>
+              <h4 class="hub2-heading">Penghargaan</h4>
               <div class="box">
                 <img src="image/hubungi1.png" alt="">
                 <img src="image/hubungi2.png" alt="">
@@ -249,12 +249,12 @@
   <footer class="footer">
     <div class="container">
       <div class="row">
-        <div class="col-lg-8">
-          <img src="image/footer-img.png" alt="">
+        <div class="col-lg-7">
+          <div class="logo"><img src="image/footer-img.png" alt=""></div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-5">
           <div class="icon">
-            <ul>
+            <ul class="ul">
               <li><i class="fa-brands fa-square-instagram"></i></li>
               <li><i class="fa-brands fa-facebook"></i></li>
               <li><i class="fa-brands fa-twitter"></i></li>
