--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                  </div>
               </div>
             </div>
-            <div class="card border-0" style="width: 18rem;">
+            <div class="card border-0 d-flex align-items-center justify-content-center" style="width: 18rem;">
               
               <div class="card-body">
                 <div class="line"></div>
